www: fixed connect/desconnect/remove buttons styles on ie8

--- a/www/web_asus_en/style.css
+++ b/www/web_asus_en/style.css
@@ -60,7 +60,6 @@
 .content_input_td {font-family: "Arial", "Helvetica", "sans-serif"; text-decoration: none; color: #000000; font-size: 10pt; height: 36; background:#FFFFFF;}
 .content_input_fd {font-family: "Arial"; text-decoration: none; color: #000000; font-size: 10pt; height:30; padding-top:4; background:#FFFFFF;}
 .content_input_fd_ro {font-family: "Arial"; text-decoration: none; color: #000000; font-size: 10pt; height:30; padding-top:4; background:#CCCCCC;}
-.content_input_fd_button_ro {font-family: "Arial"; text-decoration: none; color: #000000; font-size: 10pt; height:30; padding-top:4; background:#CCCCCC;}
 .content_input_link {font-family: "Arial"; text-decoration: none; color: #0000FF; font-size: 9pt; font-style: italic; font-weight: bold; height:24; padding-top:8; padding-left:12;}
 .content_input_list_fd {font-family: "fixedsys"; text-decoration: none; color: #000000; font-size: 10pt; background:#FFFFFF;}
 .content_input_td_less {font-family: "Arial", "Helvetica", "sans-serif"; text-decoration: none; color: #000000; font-size: 10pt; background:#FFFFFF}
